gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-log_syntax2.rs
fn main() {
    println!("{:?}", log_syntax!()); // { dg-error ".E0658." "" { target *-*-* } }
}

